# cpu_raytracing

./: CMakeLists.txt  README.md
src/: def.h  main.cpp
src/mth/: camera.h  matr.h  mth.h  mthdef.h  ray.h  vec2.h  vec3.h  vec4.h
src/renderer/: renderer.cpp  renderer.h
src/renderer/core/: core.h  cores.h  sdl_core.cpp  sdl_core.h  x11_core.cpp  x11_core.h
src/renderer/material/: material.cpp  material.h
src/renderer/shapes/: shapes.cpp  shapes.h
src/utilities/: logger.h
